--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "angular-resource": "^1.4.4",
     "angular-ui-router": "^0.2.15",
     "body-parser": "~1.13.2",
+    "connect-multiparty": "^2.0.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
